# gnetcli-server-bin-py

./: .gitignore  MANIFEST.in  Makefile  create.sh  pyproject.toml  setup.py
.github/workflows/: build.yml  ci.yml  publish-to-pypi.yml  release.yml
ci/: build_backend.py  download_release.py
gnetcli_build_backend/: __init__.py
gnetcli_server_bin/: __init__.py
