[build-system]
requires = ["setuptools>=68", "wheel", "certifi"]
build-backend = "ci.build_backend"

[project]
name = "gnetcli-server-bin-py"
version = "1.1.2"
description = "Python shim for a prepackaged gnetcli_server binary."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Fedor Zhukov" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["gnetcli_server_bin*"]
