[build-system]
requires = ["setuptools>=68", "wheel", "packaging", "certifi"]
build-backend = "gnetcli_build_backend"

[project]
name = "gnetcli-server-bin"
version = "1.1.2"
description = "Python shim for a prepackaged gnetcli_server binary."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Fedor Zhukov" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["gnetcli_server_bin*"]

[tool.setuptools.package-data]
gnetcli_server_bin = ["_bin/*"]
